Ui design Completed and added Number add on display funcanality.

--- a/Calculater/index.html
+++ b/Calculater/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculater</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    Hello Calculater
+    <div class="main_container">
+        <center><h1>Welcome to Calculater Using JS</h1></center>
+
+        <div class="calculater_main">
+            <div class="display">
+                <input class="display_content" id="display" readonly value="0"></input>
+            </div>
+            <div class="buttons">
+                <div class="rows">
+                    <div class="b1f"><button onclick="clearDisplay()" >C</button></div>
+                    <div class="b1f"><button>ESC</button></div>
+                    <div class="b1f"><button>%</button></div>
+                    <div class="b1last"><button>/</button></div>
+                </div>
+                <div class="rows">
+                    <div class="b1" id="b7" ><button onclick="addNumber(7)" >7</button></div>
+                    <div class="b1" id="b8" ><button onclick="addNumber(8)">8</button></div>
+                    <div class="b1" id="b9" ><button onclick="addNumber(9)">9</button></div>
+                    <div class="b1last"><button>*</button></div>
+                </div>
+                <div class="rows">
+                    <div class="b1" id="b4"><button onclick="addNumber(4)">4</button></div>
+                    <div class="b1" id="b5"><button onclick="addNumber(5)">5</button></div>
+                    <div class="b1" id="b6"><button onclick="addNumber(6)">6</button></div>
+                    <div class="b1last"><button>-</button></div>
+                </div>
+                <div class="rows">
+                    <div class="b1"><button onclick="addNumber(1)">1</button></div>
+                    <div class="b1"><button onclick="addNumber(2)">2</button></div>
+                    <div class="b1"><button onclick="addNumber(3)">3</button></div>
+                    <div class="b1last"><button>+</button></div>
+                </div>
+                <div class="rows">
+                    <div class="b1"><button>.</button></div>
+                    <div class="b1"><button>0</button></div>
+                    <div class="b1"><button>e</button></div>
+                    <div class="b1last"><button>=</button></div>
+                </div>
+            </div>
+        </div>
+
+    </div>  
+    <script src="index.js"></script>
 </body>
 </html>
