--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Calculater</title>
-    <link rel="stylesheet" href="/Calculater/index.css">
+    <link rel="stylesheet" href="Calculater/index.css">
 </head>
 <body>
     <div class="main_container">
@@ -48,6 +48,6 @@
 
     </div>  
     <center>Made By Poojan</center>
-    <script src="/Calculater/index.js"></script>
+    <script src="Calculater/index.js"></script>
 </body>
 </html>
